tests/ui/span/regions-infer-borrow-scope-within-loop.stderr
error[E0597]: `*x` does not live long enough
  --> $DIR/regions-infer-borrow-scope-within-loop.rs:13:20
   |
LL |         let x = make_box();
   |             - binding `x` declared here
...
LL |         y = borrow(&*x);
   |                    ^^^ borrowed value does not live long enough
...
LL |     }
   |     - `*x` dropped here while still borrowed
LL |     assert!(*y != 0);
   |             -- borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
